большой рефакторинг и переписывание всего с целью максимально ускорить обработку и устранить некоторые потенциальные npe, хакинг.