@@ -12,7 +12,7 @@ import java.net.URL;
 import java.util.*;
 
 /**
- * Galkov V A [s0506777@yandex.ru](mailto:s0506777@yandex.ru)
+ * [s0506777@yandex.ru](mailto:s0506777@yandex.ru) Galkov V.A.
  */
 public final class AppConfig {
     private static final Logger logger = LoggerFactory.getLogger(AppConfig.class);
@@ -21,6 +21,9 @@ public final class AppConfig {
 
     private AppConfig(String path) throws IOException {
         this.props = load(path);
+        if (this.props.isEmpty()) {
+            throw new IOException("Config is null or empty after load");
+        }
     }
 
     private static class Holder {
@@ -29,13 +32,9 @@ public final class AppConfig {
 
     public static synchronized AppConfig getInstance() throws IOException {
         String path = System.getProperty("config.path", DEFAULT_PATH);
-
         if (Holder.INSTANCE == null) {
             LocaleUtil.reload();
-            String testKey = LocaleUtil.getString("config_attempt_load");
-            logger.debug("DEBUG: Loaded locale test: {}", testKey);
-
-            logger.info(testKey, path);
+            logger.info(LocaleUtil.getString("config_attempt_load"), path);
             Holder.INSTANCE = new AppConfig(path);
         }
         return Holder.INSTANCE;
@@ -43,7 +42,6 @@ public final class AppConfig {
 
     private synchronized Properties load(String path) throws IOException {
         Properties raw = new Properties();
-        InputStream inputStream;
         File configFile = new File(path);
 
         try {
@@ -52,93 +50,70 @@ public final class AppConfig {
                 try (FileInputStream fis = new FileInputStream(configFile)) {
                     raw.load(fis);
                 }
-            }
-            else {
+            } else {
                 logger.warn(LocaleUtil.getString("config_not_found_disk"), path);
                 URL resourceUrl = AppConfig.class.getResource("/application.properties");
-
                 if (resourceUrl != null) {
                     logger.info(LocaleUtil.getString("config_found_jar"));
-                    inputStream = resourceUrl.openStream();
-                    try {
-                        raw.load(inputStream);
-                    } finally {
-                        if (inputStream != null) inputStream.close();
+                    try (InputStream is = resourceUrl.openStream()) {
+                        raw.load(is);
                     }
                 } else {
-                    throw new IllegalStateException(
-                            LocaleUtil.getString("config_critical_not_found")
-                    );
+                    throw new IllegalStateException(LocaleUtil.getString("config_critical_not_found"));
                 }
             }
-
-            if (raw.isEmpty())
-                throw new IOException(LocaleUtil.getString("config_empty"));
-
+            if (raw.isEmpty()) throw new IOException(LocaleUtil.getString("config_empty"));
         } catch (IOException e) {
             logger.error(LocaleUtil.getString("config_load_error"), e);
             throw e;
         }
 
-        // Разворачиваем подстановки ${...}
         Properties expanded = new Properties();
         for (String key : raw.stringPropertyNames()) {
-            String value = raw.getProperty(key).trim();
-            expanded.setProperty(key, resolveValue(value, raw));
+            String value = raw.getProperty(key);
+            if (value != null) {
+                expanded.setProperty(key, resolveValue(value.trim(), raw));
+            }
         }
-
+        if (expanded.isEmpty()) {
+            throw new IOException("Config is empty after expansion");
+        }
         return expanded;
     }
 
-    /**
-     * Рекурсивное разрешение всех ${…} в строке.
-     */
     private String resolveValue(String value, Properties raw) {
-
+        if (value == null || raw == null) return value;
         while (value.contains("${")) {
             int start = value.indexOf("${");
             if (start < 0) break;
-
             int end = value.indexOf('}', start);
             if (end < 0) throw new IllegalArgumentException(LocaleUtil.getString("unpaired_placeholder", value));
-
             String keyInside = value.substring(start + 2, end).trim();
             String replacement = raw.getProperty(keyInside);
-
-            if (replacement == null) {
-                throw new IllegalStateException(
-                        LocaleUtil.getString("value_not_found_for_key", keyInside));
-            }
-
-            replacement = resolveValue(replacement, raw);
-            value = value.substring(0, start) + replacement + value.substring(end + 1);
+            if (replacement == null) throw new IllegalStateException(LocaleUtil.getString("value_not_found_for_key", keyInside));
+            value = value.substring(0, start) + resolveValue(replacement, raw) + value.substring(end + 1);
         }
         return value;
     }
 
     public String get(String key) {
+        if (props == null) {
+            throw new IllegalStateException("Properties not loaded");
+        }
         String val = props.getProperty(key);
-        if (val == null)
-            throw new IllegalStateException(LocaleUtil.getString("key_not_found", key));
+        if (val == null) throw new IllegalStateException(LocaleUtil.getString("key_not_found", key));
         return val;
     }
 
     public List<String> getList(String key) {
         String raw = get(key).trim();
-        if (raw.isEmpty())
-            return Collections.emptyList();
-
-        String[] parts = raw.split("\\s*,\\s*");
-        List<String> result = new ArrayList<String>();
-
-        for (String part : parts) {
+        if (raw.isEmpty()) return Collections.emptyList();
+        Set<String> seen = new LinkedHashSet<>();
+        for (String part : raw.split("\\s*,\\s*")) {
             String value = part.trim();
-
-            if (!value.isEmpty() && !result.contains(value))
-                result.add(value);
+            if (!value.isEmpty()) seen.add(value);
         }
-
-        return Collections.unmodifiableList(result);
+        return List.copyOf(seen);
     }
 
     public Set<String> getSet(String key) {
